// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Length /> should render 1`] = `
<Memo(Connect(Link))
  to={[Function]}
>
  100
   amino acids
   (complete)
</Memo(Connect(Link))>
`;

exports[`<Length /> should render 2`] = `
<Memo(Connect(Link))
  to={[Function]}
>
  100
   amino acids
   (fragment)
</Memo(Connect(Link))>
`;

exports[`<Length /> should render 3`] = `
<Memo(Connect(Link))
  to={[Function]}
>
  100
   amino acids
</Memo(Connect(Link))>
`;
